--- a/aplicacao/contest/src/main/resources/templates/organizador/org_ativar_eventos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_ativar_eventos.html
@@ -59,109 +59,31 @@
           <div class="input-field col s12">
             <textarea id="descricao_evento" class="materialize-textarea" th:field="*{descricao}"></textarea>
           </div>
-          <div class="col s12">
-          
-                      
-            <div th:if="${existeSubmissao}">
-              <div class="col s3">
-                <div class="card-content"><span class="card-title"> Prazo de Submissão - Inicial</span>
-                  <label type="text" th:text="*{prazoSubmissaoInicial}" id="prazo_submissao_inicial"></label>
-                </div>
+          <div class="input-field col s12">
+            <div class="col s3">
+              <div class="card-content"><span class="card-title"> Prazo de Submissão - Inicial</span>
+                <input type="date" th:field="*{prazoSubmissaoInicial}" id="prazo_submissao_inicial" class="datepicker"/>
               </div>
-              <div class="col s3">
-                <div class="card-content"><span class="card-title"> Prazo de Revisão - Inicial</span>
-                  <label type="text" th:text="*{prazoRevisaoInicial}" id="prazo_revisao_inicial" ></label>
-                </div>
-              </div>
-              <div class="col s3">
-                <div class="card-content"><span class="card-title"> Prazo de Revisão  - Final</span>
-                  <label type="text" th:text="*{prazoRevisaoFinal}" id="prazo_revisao_final" ></label>
-                </div>
-              </div>
-              <div class="col s3">
-                <div class="card-content"><span class="card-title"> Prazo de Submissão - Final</span>
-                  <input type="date" th:field="*{prazoSubmissaoFinal}" id="prazo_submissao_final" class="datepicker"/>
-                </div>
-              </div>
-            
             </div>
-          
-           <div th:if="${existeSubmissaoRevisao}">
-             <div class="col s3">
-               <div class="card-content"><span class="card-title"> Prazo de Submissão - Inicial</span>
-                 <label type="text" th:text="*{prazoSubmissaoInicial}" id="prazo_submissao_inicial"></label>
-               </div>
-             </div>
-             <div class="col s3">
-               <div class="card-content"><span class="card-title"> Prazo de Revisão - Inicial</span>
-                 <label type="text" th:text="*{prazoRevisaoInicial}" id="prazo_revisao_inicial" ></label>
-               </div>
-             </div>
-             <div class="col s3">
-               <div class="card-content"><span class="card-title"> Prazo de Revisão  - Final</span>
-                 <input type="date" th:field="*{prazoRevisaoFinal}" id="prazo_revisao_final"  class="datepicker"/>
-               </div>
-             </div>
-             <div class="col s3">
-               <div class="card-content"><span class="card-title"> Prazo de Submissão - Final</span>
-                 <label type="text" th:text="*{prazoSubmissaoFinal}" id="prazo_submissao_final"></label>
-               </div>
-             </div>
-           </div>
-          
-           <div th:if="${eventoAtivo}">
-             <div class="col s3">
-               <div class="card-content"><span class="card-title"> Prazo de Submissão - Inicial</span>
-                 <label type="text" th:text="*{prazoSubmissaoInicial}" id="prazo_submissao_inicial"></label>
-               </div>
-             </div>
-             <div class="col s3">
-               <div class="card-content"><span class="card-title"> Prazo de Revisão - Inicial</span>
-                 <label type="text" th:text="*{prazoRevisaoInicial}" id="prazo_revisao_inicial" ></label>
-               </div>
-             </div>
-             <div class="col s3">
-               <div class="card-content"><span class="card-title"> Prazo de Revisão  - Final</span>
-                 <label type="text" th:text="*{prazoRevisaoFinal}" id="prazo_revisao_final" ></label>
-               </div>
-             </div>
-             <div class="col s3">
-               <div class="card-content"><span class="card-title"> Prazo de Submissão - Final</span>
-                 <label type="text" th:text="*{prazoSubmissaoFinal}" id="prazo_submissao_final"></label>
-               </div>
-             </div>
-            
-           </div>
-          
-           <div th:if="${eventoInativo}">
-            
-             <div class="col s3">
-               <div class="card-content"><span class="card-title"> Prazo de Submissão - Inicial</span>
-                 <input type="date" th:field="*{prazoSubmissaoInicial}" id="prazo_submissao_inicial" class="datepicker"/>
-               </div>
-             </div>
-             <div class="col s3">
-               <div class="card-content"><span class="card-title"> Prazo de Revisão - Inicial</span>
-                 <input type="date" th:field="*{prazoRevisaoInicial}" id="prazo_revisao_inicial" disabled="disabled" class="datepicker"/>
-               </div>
-             </div>
-             <div class="col s3">
-               <div class="card-content"><span class="card-title"> Prazo de Revisão  - Final</span>
-                 <input type="date" th:field="*{prazoRevisaoFinal}" id="prazo_revisao_final" disabled="disabled" class="datepicker"/>
-               </div>
-             </div>
-             <div class="col s3">
-               <div class="card-content"><span class="card-title"> Prazo de Submissão - Final</span>
-                 <input type="date" th:field="*{prazoSubmissaoFinal}" id="prazo_submissao_final" disabled="disabled" class="datepicker"/>
-               </div>
-             </div>
-            
-           </div>
-          
+            <div class="col s3">
+              <div class="card-content"><span class="card-title"> Prazo de Revisão - Inicial</span>
+                <input type="date" th:field="*{prazoRevisaoInicial}" id="prazo_revisao_inicial" disabled="disabled" class="datepicker"/>
+              </div>
+            </div>
+            <div class="col s3">
+              <div class="card-content"><span class="card-title"> Prazo de Revisão  - Final</span>
+                <input type="date" th:field="*{prazoRevisaoFinal}" id="prazo_revisao_final" disabled="disabled"  class="datepicker"/>
+              </div>
+            </div>
+            <div class="col s3">
+              <div class="card-content"><span class="card-title"> Prazo de Submissão - Final</span>
+                <input type="date" th:field="*{prazoSubmissaoFinal}" id="prazo_submissao_final" disabled="disabled" class="datepicker"/>
+              </div>
+            </div>
           </div>
           <div class="input-field col s12">
             <button type="submit" class="waves-effect waves-light btn white-text">
-            Salvar Alterações<i aria-hidden="true" class="fa fa-floppy-o left"></i>
+            Salvar Detalhes e Ativar<i aria-hidden="true" class="fa fa-floppy-o left"></i>
             </button>
           </div>
         
