--- a/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_inativos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_inativos.html
@@ -30,7 +30,9 @@
       <div class="row opcoes">
         <a th:href="@{/eventoOrganizador/ativos}">Eventos Ativos</a>
         <a th:href="@{/eventoOrganizador/inativos}">Eventos Inativos</a>
-        <a href="org_revisores.html">Revisores</a><a href="org_trilhas.html">Trilhas</a></div>
+        <a href="org_revisores.html">Revisores</a>
+        <a th:href="@{/eventoOrganizador/trilhas}">Trilhas</a>
+      </div>
         
       <div class="row">
       	
