--- a/aplicacao/contest/src/main/resources/templates/organizador/org_trilhas.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_trilhas.html
@@ -1,9 +1,191 @@
 <!DOCTYPE html>
 <html>
   <head>
-   
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Constest - Controle de Eventos de Submissão</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <!-- CSS-->
+    <link media="screen,projection" rel="stylesheet" href="../css/materialize.min.css">
+    <link media="screen,projection" rel="stylesheet" href="../css/font-awesome.min.css">
+    <link media="screen,projection" rel="stylesheet" href="../css/style.css">
   </head>
   <body>
-
+    <nav role="navigation" class="purple darken-4">
+      <div class="nav-wrapper container"><a href="#"><img src="../imgs/logotipo_white.png" alt="Contest" width="200px"></a>
+        <ul class="white-text right hide-on-med-and-down">
+          <li><a href="#">Link 01</a></li>
+          <li><a href="#">Link 02</a></li>
+        </ul>
+        <ul id="nav-mobile" class="side-nav">
+          <li><a href="#">Link 01</a></li>
+          <li><a href="#">Link 02</a></li>
+        </ul><a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
+    <div class="container page"><br>
+      <div class="row opcoes">
+        <a th:href="@{/eventoOrganizador/ativos}">Eventos Ativos</a>
+        <a th:href="@{/eventoOrganizador/inativos}">Eventos Inativos</a>
+        <a href="org_revisores.html">Revisores</a>
+        <a th:href="@{/eventoOrganizador/trilhas}">Trilhas</a></div>
+      <div class="row">
+        <h2>Trilhas do Evento : "Nome do Evento"</h2>
+        <div id="error_area" class="row chip red white-text">"Mensagem de Erro"<i class="material-icons">close</i></div>
+        <form class="col s12">
+          <div class="row"></div>
+          <div class="input-field col m3 offset-m10 s6"> <a href="#modal" class="waves-effect waves-light btn white-text modal-trigger">Trilha<i aria-hidden="true" class="fa fa-plus left"> </i></a></div>
+          <div class="row">
+            <div class="input-field col m12 s6">
+              <table class="striped centered">
+                <thead>
+                  <tr> 
+                    <th>Trilha</th>
+                    <th>Trabalhos Enviados</th>
+                    <th>Ações</th>
+                  </tr>
+                </thead>
+                <tbody>             
+                  <tr>
+                    <td>Trilha Padrão</td>
+                    <td>0</td>
+                    <td> <a href="org_detalhes_trilha.html">Ver Trilha</a></td>
+                  </tr>
+                  <tr>
+                    <td>Trilha de lot</td>
+                    <td>2</td>
+                    <td> <a href="org_detalhes_trilha.html">Ver Trilha</a></td>
+                  </tr>
+                  <tr>
+                    <td>Trilha de hue</td>
+                    <td>2</td>
+                    <td> <a href="org_detalhes_trilha.html">Ver Trilha      </a></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <div id="paginacao">         
+                        <div class="row col s12 center">
+                          <ul class="pagination">
+                            <li class="disabled"><a href="#"><i class="material-icons">chevron_left</i></a></li>
+                            <li class="active"><a href="#">1</a></li>
+                            <li class="waves-effect"><a href="#">2</a></li>
+                            <li class="waves-effect"><a href="#"><i class="material-icons">chevron_right</i></a></li>
+                          </ul>
+                        </div>
+          </div>
+        </form>
+      </div>
+      <div id="modal" class="modal">
+        <div class="modal-content">
+          <h4>Adicionar Trilha</h4>
+          <form>
+            <div class="input-field col m6 s6">
+              <input id="nome_da_trilha" type="text">
+              <label for="nome_da_trilha">Nome da Trilha</label>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer"><a href="#" class="modal-action modal-close waves-effect btn-flat">Confirmar</a><a href="#" class="modal-action modal-close waves-effect btn-flat">Fechar            </a></div>
+      </div>
+    </div>
+    <footer class="page-footer purple darken-4">
+      <div class="footer-copyright">
+        <div class="container"><a href="http://www.npi.quixada.ufc.br" class="white-text">Desenvolvido por NPI - Núcleo de Práticas em Informática</a></div>
+      </div>
+    </footer>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="../js/materialize.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        //Inicialização dos elementos no JS
+        //Parallax BG
+        $('.parallax').parallax();
+        
+        //sideNav
+        $(".button-collapse").sideNav();
+        
+        //Tooltips
+        $('.tooltipped').tooltip({delay: 50});
+        
+        //select_initializer
+        $('select').material_select();
+        
+        //datepicker
+        $('.datepicker').pickadate({
+          selectMonths: true, // Creates a dropdown to control month
+          selectYears: 15, // Creates a dropdown of 15 years to control year
+          //Persnonalizando nomes dos meses do ano
+          monthsFull: [ 'Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro' ],
+          //Persnonalizando nomes dos dias da semana
+          weekdaysFull: [ 'Domingo', 'Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado' ],
+          weekdaysShort: [ 'Dom', 'Seg', 'Ter', 'Qua', 'Qui', 'Sex', 'Sab' ],
+          weekdaysLetter: [ 'D', 'S', 'T', 'Q', 'Q', 'S', 'S' ],
+          today: 'Hoje',
+          clear: 'Limpar',
+          close: 'Fechar'
+        });
+        
+        //Trata as datas na tela org_editar_eventos 
+        var calendarioSubmissaoInicial = "#prazo_submissao_inicial";
+        var calendarioSubmissaoFinal = "#prazo_submissao_final";
+        var calendarioRevisaoInicial = "#prazo_revisao_inicial";
+        var calendarioRevisaoFinal = "#prazo_revisao_final";
+        
+        function habilitarCalendario(calendario){
+          $(calendario).removeAttr( "disabled" );
+        }
+        
+        function desabilitarCalendario(calendario){
+          $(calendario).attr( "disabled", true );
+          $(calendario).pickadate("clear");
+        }
+        
+        function definirDataMinimaCalendario(calendario, dataMin){
+          var picker = getPicker(calendario);
+          picker.set("min", dataMin);
+        }
+        
+        function getPicker(idCalendario){
+          var $input = $(idCalendario).pickadate();
+          var picker = $input.pickadate("picker");
+          return picker;
+        }
+        
+        function configurarCalendario(idCalendarioInicial, idCalendarioFinal){
+          var picker = getPicker(idCalendarioInicial);
+          var dataAtual = picker.get();
+          var umDia = 1;
+          
+          var dataMinima = new Date(dataAtual);
+          dataMinima.setDate(dataMinima.getDate()+umDia);
+                
+          if (dataAtual.length == 0) {
+            desabilitarCalendario(idCalendarioFinal);
+          } else {
+            habilitarCalendario(idCalendarioFinal);       
+            
+            definirDataMinimaCalendario(idCalendarioFinal, dataMinima);
+          }
+        }
+        
+        $(calendarioSubmissaoInicial).on("change",function(){
+          configurarCalendario(calendarioSubmissaoInicial, calendarioSubmissaoFinal);
+        });
+        
+        $(calendarioSubmissaoFinal).on("change",function(){
+          configurarCalendario(calendarioSubmissaoFinal, calendarioRevisaoInicial);
+        });
+        
+        $(calendarioRevisaoInicial).on("change",function(){
+          configurarCalendario(calendarioRevisaoInicial, calendarioRevisaoFinal);
+        });
+        
+        //Inicialização do Modal excluir Evento
+        $('.modal-trigger').leanModal();
+        
+      });
+    </script>
   </body>
 </html>
