--- a/aplicacao/contest/src/main/resources/templates/organizador/org_atribuir_revisores.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_atribuir_revisores.html
@@ -186,7 +186,10 @@
               
               
               var token = $("meta[name='_csrf']").attr("content");
-              
+              var data = {
+			      		  	'revidorId':idPessoa,
+			    		  	'trabalhoId': 2,
+			    		  };
               $.ajax({
             	  contentType: 'application/json;charset=UTF-8',
             	  url: '/eventoOrganizador/evento/1/revisores',
@@ -195,7 +198,7 @@
             	  type: 'POST',
             	  cache: false, 
             	  processData: false, 
-            	  data: {'revidorId':idPessoa},
+            	  data: JSON.stringify(data),
             	  success: function (data) {
 		                	  document.getElementById("listaEscolhidos").appendChild(a);	
 		                	  console.log('Deu tudo certo...'+data);
