--- a/aplicacao/contest/src/main/resources/templates/revisor/revisor_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/revisor/revisor_trabalhos.html
@@ -36,7 +36,7 @@
 	<div class="container page">
 		<br />
 		<div class="row opcoes">
-			<a href="revisor_index.html">Eventos Ativos</a>
+			<a th:href="@{/revisor}">Eventos Ativos</a>
 		</div>
 		<div class="row">
 			<h1 th:text="${evento.nome}"></h1>
@@ -60,9 +60,10 @@
 								<span class="card-title" th:text="${trabalho.titulo}"></span>
 								<h6 th:text="'Trilha: ' + ${trabalho.trilha.nome}"></h6>
 							</div>
-							<div class="card-action">
-								<a th:href="@{'/revisor/' + ${evento.id} + '/' + ${trabalho.id} + '/revisar'}"
+							<div class="card-action" th:switch="${#lists.contains(trabalhosRevisados, trabalho.id)}">
+								<a th:case='false' th:href="@{'/revisor/' + ${evento.id} + '/' + ${trabalho.id} + '/revisar'}"
 									class="btn white-text waves-effect waves-light btn-large">REVISAR</a>
+								<a th:case='true' class="btn white-text waves-effect waves-light btn-large light-green darken-2" th:disabled="${true}">REVISADO</a>
 							</div>
 						</div>
 					</div>
